--- a/my-poke-app/package.json
+++ b/my-poke-app/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://pernillebarbesgaard.github.io",
+  "homepage": "https://pernillebarbesgaard.github.io/myPokeApp",
   
   "name": "my-poke-app",
   "version": "0.1.0",
@@ -16,7 +16,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b master -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
