--- a/my-poke-app/package.json
+++ b/my-poke-app/package.json
@@ -1,6 +1,5 @@
 {
-  "homepage": "https://pernillebarbesgaard.github.io/myPokeApp",
-  
+  "homepage": "https://Sorekjen.github.io/my-poke-app",
   "name": "my-poke-app",
   "version": "0.1.0",
   "private": true,
@@ -12,6 +11,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
+    "react-throttle": "^0.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
